# lwyr-backend

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.test  README.md  alembic.ini  build.gradle.kts  docker-compose.yml  gradlew  pyproject.toml  settings.gradle.kts
alembic/: env.py
alembic/versions/: 001_initial.py
app/: __init__.py  config.py  database.py  exceptions.py  main.py  security.py
app/api/: __init__.py  deps.py
app/api/routes/: __init__.py  admin.py  auth.py  conversations.py  embedding.py  translation.py
app/api/schemas/: __init__.py  auth.py  conversation.py  embedding.py  translation.py
app/models/: __init__.py  conversation.py  embedding.py  trained_document.py  user.py
app/repositories/: __init__.py  conversation_repository.py  embedding_repository.py  trained_document_repository.py  user_repository.py
app/services/: __init__.py  auth_service.py  embedding_service.py  openrouter_service.py  pdf_service.py  rag_service.py  translation_service.py
docker/: init.sql
src/main/kotlin/com/lwyr/ai/: LwyrApplication.kt
src/main/kotlin/com/lwyr/ai/config/: JooqConfig.kt  OpenRouterConfig.kt
src/main/kotlin/com/lwyr/ai/controller/: AuthController.kt  EmbeddingController.kt
src/main/kotlin/com/lwyr/ai/dto/auth/: AuthDto.kt
src/main/kotlin/com/lwyr/ai/dto/embedding/: EmbeddingRequest.kt  EmbeddingResponse.kt  SearchResult.kt
src/main/kotlin/com/lwyr/ai/entity/: Embedding.kt  TrainedDocument.kt  User.kt
src/main/kotlin/com/lwyr/ai/exception/: AppExceptions.kt  GlobalExceptionHandler.kt  OpenRouterBadRequestException.kt  OpenRouterException.kt  OpenRouterRateLimitException.kt  OpenRouterServerException.kt  OpenRouterUnauthorizedException.kt
src/main/kotlin/com/lwyr/ai/repository/: EmbeddingRepository.kt  TrainedDocumentRepository.kt  UserRepository.kt
src/main/kotlin/com/lwyr/ai/security/: SecurityConfig.kt
src/main/kotlin/com/lwyr/ai/service/: AuthService.kt  EmbeddingService.kt  OpenRouterService.kt  PdfService.kt
src/main/resources/: application.properties  application.yml
src/main/resources/db/migration/: V1__create_users_table.sql  V2__enable_vector_extension.sql  V3__create_custom_types.sql  V4__create_conversations_table.sql  V5__create_messages_table.sql  V6__create_trained_documents_table.sql  V7__create_indexes.sql  V8__create_embeddings_table.sql
src/test/kotlin/com/lwyr/ai/controller/: AuthControllerIntegrationTest.kt  AuthControllerTest.kt  DatabaseCleanupTest.kt
src/test/kotlin/com/lwyr/ai/integration/: AuthControllerIT.kt  BaseIT.kt  BaseIntegrationTest.kt
src/test/kotlin/com/lwyr/ai/integration/controller/: AuthControllerIT.kt  AuthControllerTestConfiguration.kt
src/test/kotlin/com/lwyr/ai/service/: OpenRouterServiceTest.kt
src/test/resources/: application-test.properties  application-test.yml
tests/: conftest.py
tests/integration/: test_auth_controller.py
tests/unit/: test_auth_service.py
