[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app.*"]

[project]
name = "lwyr"
version = "1.0.0"
description = "Legal RAG Agent - Lebanese Law Q&A System"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Lwyr Team" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "pypdf>=5.0.0",
    "PyJWT>=2.10.0",
    "passlib[bcrypt]>=1.7.4,<4.2",
    "python-multipart>=0.0.20",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "types-pyyaml>=6.0.0",
    "types-PyJWT>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "pytest-testcontainers>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/lwyr/lwyr-backend"
Repository = "https://github.com/lwyr/lwyr-backend"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "N",      # pep8-naming
    "D",      # pydocstyle
    "YTT",    # flake8-2020
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D200",   # Fits on one line
    "D203",   # 1 blank line required before class docstring
    "D213",   # Multi-line docstring summary should start at the second line
    "B008",   # Do not perform function calls in argument defaults
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "*.egg",
    "alembic/versions",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "S", "B", "ARG", "N"]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_context = true
show_error_codes = true
pretty = true
color_output = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "pgvector.*",
    "pypdf.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"
exclude = "\\.pygit|\\.nox|\\.tox|\\.venv|\\.build|\\.dist|alembic/versions"

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "build", "dist"]
